Added collections and paging.
I've started on filtering as well from the database side, but I need
	to add the UI and intermediate logic for this.

--- a/MovieLockerAlphaThree/res/values/strings.xml
+++ b/MovieLockerAlphaThree/res/values/strings.xml
@@ -6,6 +6,12 @@
     
 	<string name="genre_list_title">Genres</string>
 	<string name="genre_title">Genre</string>
+	<string name="genre_name_text">Name</string>
+	
+	<string name="collection_list_title">Collections</string>
+	<string name="collection_title">Collection</string>
+	<string name="collection_name_text">Collection Name</string>
+	<string name="collection_edit_members_text">Edit Members</string>
 	
 	<string name="movie_list_title">Movies</string>
 	<string name="movie_title">Movie</string>
@@ -14,12 +20,13 @@
     <string name="menu_text_save">Save</string>
     <string name="menu_delete_movie_text">Delete</string>
     
-    <string name="genre_name_text">Name</string>
-    
     <string name="movie_name_text">Name</string>
     <string name="movie_description_text">Description</string>
+    <string name="movie_price_text">Price</string>
     <string name="movie_genre_text">Genre</string>
     <string name="movie_barcode_text">Barcode</string>
+    <string name="movie_radio_owned_text">Owned</string>
+    <string name="movie_radio_wish_text">Wish List</string>
     
     <string name="barcode_scan_text">Scan Barcode</string>
 
